--- a/src/views/table/components/betting-menu/betting-menu.scss
+++ b/src/views/table/components/betting-menu/betting-menu.scss
@@ -1,7 +1,7 @@
 ﻿.betting-menu {
 
     border: none;
-    background-color: aliceblue;
+    background-color: transparent;
     padding: 5px;
     overflow-y: auto;
     position: absolute;
