--- a/src/views/table/components/cards/card/card.scss
+++ b/src/views/table/components/cards/card/card.scss
@@ -34,14 +34,14 @@ $card-font: sans-serif;
     }
 
     &.ghost {
+        /*
         opacity: 0.5;
         transition: opacity 0.25s;
-        /*
+*/
         .card-inner {
-            background-color: #999;
+            background-color: #bbb;
             transition: background-color 0.25s;
         }
-*/
     }
 
     &.showdown:not(.used) {
@@ -50,7 +50,7 @@ $card-font: sans-serif;
         transition: opacity 0.25s;
 */
         .card-inner {
-            background-color: #999;
+            background-color: #bbb;
             transition: background-color 0.25s;
         }
     }
