buttons are not immediately clickable

--- a/src/views/table/components/bet-button/bet-button.scss
+++ b/src/views/table/components/bet-button/bet-button.scss
@@ -10,6 +10,11 @@
     box-sizing: border-box;
     align-items: center;
 
+    &.not-clickable
+    {
+        background-color: orange;
+    }
+
     .light
     {
         background-color: #ddd;
